# ETABS-MCP

./: .gitignore  CHANGELOG.md  ETABS_MCP_CAPABILITIES.md  LICENSE  README.md  build.ps1  build_api_index.py  build_api_index_typelib.py  pyproject.toml
github/: build.ps1
mcpb/: etabs-mcp.spec  manifest.json
src/etabs_mcp/: __init__.py  connection.py  etabs_api_embeddings.npy  etabs_api_index.json  etabs_api_index_typelib_temp.json  http_middleware.py  main.py  server.py  skills.py  version.py
src/etabs_mcp/etabs_skills/bnbc2020-load-combinations/: SKILL.md
src/etabs_mcp/etabs_skills/bnbc2020-seismic-params/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-analysis/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-auto-seismic/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-core/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-database-tables/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-design/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-errors/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-geometry/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-loads/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-materials/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-results/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-rs-function/: SKILL.md
src/etabs_mcp/etabs_skills/etabs-sections/: SKILL.md
src/etabs_mcp/file_io/: __init__.py  const.py  helpers.py  models.py  path_validator.py  readers.py  validation.py  writers.py
src/etabs_mcp/sandbox/: __init__.py  ast.py  com_proxy.py  const.py  executor.py  module_proxy.py  stdio_helpers.py
tests/: test_sandbox.py
(+33 files in other folders)
